--- a/ianmcorvidae-audio-output/PKGBUILD
+++ b/ianmcorvidae-audio-output/PKGBUILD
@@ -1,12 +1,14 @@
 # Maintainer: Ian McEwen <ianmcorvidae@ianmcorvidae.net>
 pkgname=ianmcorvidae-audio-output
-pkgver=2011.08.26
+pkgver=2011.08.27
 pkgrel=1
 pkgdesc="audio metapackage for ianmcorvidae"
 license=('none')
 arch=('any')
 depends=('qjackctl'
-	 'alsa-tools-ice1712')
+	 'alsa-tools-ice1712'
+	 'alsa-utils'
+	 'alsa-plugins')
 
 build() {
   return 0 
