--- a/ianmcorvidae-audio-processing/PKGBUILD
+++ b/ianmcorvidae-audio-processing/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Ian McEwen <ianmcorvidae@ianmcorvidae.net>
 pkgname=ianmcorvidae-audio-processing
-pkgver=2011.08.26
+pkgver=2011.08.27
 pkgrel=1
 pkgdesc="audio metapackage for ianmcorvidae"
 license=('none')
@@ -12,6 +12,7 @@ depends=('picard'
 	 'cdrdao'
 	 'cdrkit'
 	 'shntool'
+	 'cuetools'
 	 'id3v2')
 
 build() {
