--- a/ianmcorvidae-mpd/PKGBUILD
+++ b/ianmcorvidae-mpd/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Ian McEwen <ianmcorvidae@ianmcorvidae.net>
 pkgname=ianmcorvidae-mpd
-pkgver=2011.08.27
+pkgver=2012.10.01
 pkgrel=1
 pkgdesc="mpd metapackage for ianmcorvidae"
 license=('none')
@@ -8,7 +8,7 @@ arch=('any')
 depends=('mpd-git'
 	 'mpdscribble-git'
 	 'mpc'
-	 'ncmpcpp-git')
+	 'ncmpcpp')
 
 build() {
   return 0 
